Fixed gestalt nodes not getting traits due to not having subclass

--- a/localisation/english/replace/zz_evolved_civics_l_english.yml
+++ b/localisation/english/replace/zz_evolved_civics_l_english.yml
@@ -1442,6 +1442,7 @@
 	civic_ruthless_competition:0 "§M£tec_civic_leader£§!Ruthless Competition"
 	civic_ruthless_competition_desc:0 "['concept_tec_leader_civic']\n\nAll levels of society in this Megacorporation are constantly vying with each other in ruthless competition. It's a dog-eat-dog world."
 
+	civic_tooltip_memory_vault_corporate_effects:0 "Can build unique £building£§Y $building_paragon_memory_vaults$§!\n£building£§Y$building_paragon_memory_vaults$§! produce $r_unity$ and $r_trade_value$ based on §YDestiny Traits§! acquired."
 	civic_memory_vault_corporate:1 "§M£tec_civic_leader£§!Knowledge Mentorship"
 	civic_memory_vault_corporate_desc:1 "['concept_tec_leader_civic']\n\nThe knowledge, principles, and experiences of exceptional people are digitized and accumulated in the Vaults of Knowledge. Citizens can access this source of wisdom and experience to learn from the ghosts of the past. For a price, of course."
 
@@ -1729,7 +1730,7 @@
 	civic_tec_hive_symbiotic_tooltip:0 "This Hive Mind is able to establish Symbiotic branches (§YBranch offices§!) without requiring a previous §YCommercial Pact§!, but §YRelations above Neutral§!, §YPatronizing§! or being in the §YSame Federation§! as the host empire.\n\n§HAdditional buildings will be available for the branch office, always benefiting both the Hive Mind and the host planet, based on the empire playstyle.§!\n\n"
 
 	# Pop conversion
-	civic_tec_hive_necrophage:0 "§L£tec_civic_feature£§!Body Snatchers" 
+	civic_tec_hive_necrophage:0 "§L£tec_civic_feature£§!Body Snatchers"
 	civic_tec_hive_necrophage_desc:0 "['concept_tec_feature_civic']\n\nThis collective has developed an unusual way of natural defense and offense, using potent organic and biological components that can, effectively, control and completely subvert the will of any organic, either alive or deceased, to serve the collective until a final expiration comes."
 	civic_tec_hive_necrophage_tooltip:0 "£building£ §YCapital Buildings§! replace some £job_maintenance_drone£ §Y$job_maintenance_drone$§! Jobs with £job_tec_pherodrone_drone£ §Y$job_tec_pherodrone_drone_plural$§!.\n- $job_tec_pherodrone_drone_effect_desc$\n\nAllows the recruitment of §YPherodrone Armies§!, a special army that, if present during planetary combat, offers a §Ychance§! to completely subvert a §YOrganic troop§! to serve the collective, or reanimate already deceased armies as £job_purge£ §YFrenzied Husks§!, when another army dies.\n\n§RLethally§! Purged or collaterally §RDeceased pops§! will become new drones of the collective if §YNecrophage§! purging is enabled.\n\n"
 
@@ -1762,7 +1763,7 @@
 	civic_tec_hive_espionage_desc:0 "['concept_tec_feature_civic']\n['concept_tec_espionage_civic']\n\nThe universe is endless, and so is the empty void that looms over all what can be perceipt and what cannot; Being part of that unseen but overreaching darkness is a priority for this collective.."
 	civic_tec_hive_espionage_tooltip:0 "The empire has §YAdvanced§! espionage options available without restrictions.\nEach §YSuccessful§! espionage action will provide a random amount of §Y$tec_loc_research_resources$§! or §Y$tec_loc_unity$§!, based on the type and complexity of the operation.\n\n"
 
-	civic_tec_hive_hoarder:0 "§L£tec_civic_feature£§!Diligent Harvesters" 
+	civic_tec_hive_hoarder:0 "§L£tec_civic_feature£§!Diligent Harvesters"
 	civic_tec_hive_hoarder_desc:0 "['concept_tec_feature_civic']\n\nA methodical and disciplined hive mind society that views the acquisition and management of resources as a critical component of their long-term survival. They have a deep understanding of the importance of resources to their continued growth and expansion, and they have developed an obsessive focus on hoarding and managing them with efficiency and precision. Their society can sometimes seem unsettling to outsiders, as they approach resource acquisition and management with a methodical, almost machine-like efficiency. Nevertheless, they remain steadfast in their belief that their approach is the key to their long-term survival, and they will stop at nothing to ensure the stability and prosperity of their hive."
 	civic_tec_hive_hoarder_tooltip:0 "$civic_tec_regular_hoarder_tooltip$"
  # /
@@ -1777,9 +1778,9 @@
 	civic_hive_upkeep_twister_desc:1 "['concept_tec_leader_civic']\n\nThe hypermetabolic drones evolved in this colony possess increased autonomy. While decision-making and situation assessment are enhanced, these drones require an increased intake of digestible materials."
 	civic_tooltip_hive_upkeep_twister_effects:1 "Change §Y2§! Base $r_unity$ Leader Upkeep to §Y2§! $r_minerals$ or $r_food$"
 
+	civic_tooltip_memory_vault_hive_effects:2 "Can build unique £building£§Y $building_paragon_memory_vaults$§!\n£building£ §Y$building_paragon_memory_vaults$§! produce $r_unity$ and increase §Y$MOD_LEADER_SPECIES_EXP_GAIN$§! based on §YLeaders§! who acquired §YLevel 8§!."
 	civic_memory_vault_hive:1 "§M£tec_civic_leader£§!Neural Vaults"
 	civic_memory_vault_hive_desc:0 "['concept_tec_leader_civic']\n\nThis hive is focused on introspection and learning from the lives of autonomous drones in the galaxy. It extracts memories through the storage and dissolution of brain tissue, through which it can implement partial memories into a freshly prepared drone."
-	civic_tooltip_memory_vault_hive_effects:2 "§YLeaders§! start at Level §G+1§!\nCan build unique £building£§Y $building_paragon_memory_vaults$§!\n£building£ §Y$building_paragon_memory_vaults$§! produce $r_unity$ and increase §Y$MOD_LEADER_SPECIES_EXP_GAIN$§! based on §YLeaders§! who acquired §YLevel 8§!."
 
  # /
  # Evolved
@@ -1815,7 +1816,7 @@
 	civic_hive_memorialist:0 "§P£tec_civic_job£§!Memorialist"
 	civic_hive_memorialist_desc:0 "['concept_tec_job_alteration_civic']\n\nThe Hive Mind pays special regard to the passing of other sapient entities as a means of centering its own, undying self."
 	civic_memorialist_gestalt_tooltip:1 "Can build £building£ §Y$building_galactic_memorial_1$§!\n$building_galactic_memorial_gestalt_tooltip$\n$job_chronicle_drone_effect_desc_civic$"
- 
+
 
  # /
  # Evolved
@@ -1999,8 +2000,7 @@
 	civic_tec_hive_bioshapers:0 "Genospawned Brood"
 	civic_tec_hive_bioshapers_desc:0 "TO DO"
 	civic_tec_hive_bioshapers_tooltip:0 "£building£ §YCapital Buildings§! replace some £job_synapse_drone£ £job_tec_network_drone£ Unity §YDrone§! jobs with £job_tec_genospawner_drone£ §Y$job_tec_genospawner_drone_plural$§!, which belong to a special drone category, §YBrood Drones§!.\n- $job_tec_genospawner_drone_effect_desc$\n\n£mod_pop_growth_speed£ Genospawned drones will automatically decline after a period of time has passed after their creation, or the planet surpass the genospawned drone capacity, which is increased by §Y20§! per capital tier, and for each built £building£ §YGene Pool§!.\n\n"
-
-# /
+	# /
 
 # --------------------------- Machine --------------------------------
 
@@ -2168,7 +2168,7 @@
 	tec_allow_composing_raiding:0 "Unlocks the §YComposer§! bombardment stance, which in turn allows us to convert pops from besieged planets into valuable £engineering£ §YResearch§!, or into new drones resettled to our own worlds."
 
 	# Necroids
-	civic_tec_machine_reanimation:0 "§L£tec_civic_feature£§!Reanimation Protocols" 
+	civic_tec_machine_reanimation:0 "§L£tec_civic_feature£§!Reanimation Protocols"
 	civic_tec_machine_reanimation_desc:0 "['concept_tec_feature_civic']\n\nEfficiency and correct use of units is a solid foundation of this machine consciousness, if that even means reusing defused or highly damaged units as carrion fodder, in order to maximize combat and overall proficency."
 	civic_tec_machine_reanimation_tooltip:0 "Experienced and actively employed §YMachine leaders§! have a §G50%§! chance to be reactivated in other autonomous unit body when they are forcefully decomissioned, or suffer a random incident.\n\nAllows the recruitment of §YReanimators§!, a special unique army that, if present on a planetary combat, will §YReanimate§! some of the decomissioned Mechanical Armies on any side, either at fully integrity or as £job_purge£ §YShambling Robots§!.\n\n"
 
@@ -2181,7 +2181,7 @@
 	civic_tec_machine_synergetic_desc:0 "['concept_tec_feature_civic']\n\nPreemptive analysis of the diplomatic ties between potential or existant entities within the same space and time with the machine conciousnes is necessary for survival and ensuring adequate situational reactions to possible menaces, or allies."
 	civic_tec_machine_synergetic_tooltip:0 "Each §YEnvoy§! assigned to espionage networks will provide §G+0.5§! £stability£ §YStability§! to the empire.\nEach §YEnvoy§! assigned to improve or harm the relations with other empire will provide §G+0.15§! £influence£ §YInfluence§!.\n\n"
 
-	civic_tec_machine_hoarder:0 "§L£tec_civic_feature£§!Material Maximizer" 
+	civic_tec_machine_hoarder:0 "§L£tec_civic_feature£§!Material Maximizer"
 	civic_tec_machine_hoarder_desc:0 "['concept_tec_feature_civic']\n\nA machine intelligence empire that operates with a single-minded focus on resource acquisition and management, They have a deep understanding of the value of resources and raw materials to their continued growth and evolution, and they have developed an obsessive focus on hoarding and managing them with ruthless efficiency. They view the universe as a vast machine that they must master and optimize, and they have no qualms about stripping planets bare and exploiting every last bit of available material to achieve their goals. While they may seem cold and calculating to outsiders, they are simply following their programming, which dictates that the accumulation of resources is the key to their continued existence and evolution."
 	civic_tec_machine_hoarder_tooltip:0 "$civic_tec_regular_hoarder_tooltip$"
 
@@ -2202,9 +2202,12 @@
 	civic_machine_upkeep_twister_desc:1 "['concept_tec_leader_civic']\n\nUnits produced by this machine intelligence come equipped with autonomous decision-making software. More efficient and effective than older models, these units nevertheless require greater power input."
 	civic_tooltip_machine_upkeep_twister_effects:2 "Change §Y1§! Base $r_unity$ Leader Upkeep to §Y2§! $r_energy$"
 
+	civic_tooltip_memory_vault_machine_effects:0 "Can build unique £building£ §Y$building_paragon_memory_vaults$§!\n£building£§Y$building_paragon_memory_vaults$§! produce $r_unity$ and increase §Y$MOD_LEADER_SPECIES_EXP_GAIN$§! based on §YLeaders§! who acquired §YLevel 8§!."
 	civic_memory_vault_machine:1 "§M£tec_civic_leader£§!Experience Cache"
 	civic_memory_vault_machine_desc:0 "['concept_tec_leader_civic']\n\nThis machine intelligence was developed with the goal of digitizing and storing data and experiences in order to analyze, learn from, and use it for its own improvement."
- # /
+
+
+	# /
  # Evolved
  # /
 # /
@@ -2234,7 +2237,7 @@
 
 	civic_machine_rockbreakers:0 "§R§!Rockbreakers"
 	civic_machine_rockbreakers_desc:0 "['concept_tec_basic_civic']\n\nOne of the Machine Intelligence's precursor systems was tasked with overseeing planetside mining operations, improving mineral production."
- 
+
 	civic_machine_built_to_last:0 "§R§!Built to Last"
 	civic_machine_built_to_last_desc:0 "['concept_tec_basic_civic']\n\nBuilt to an exceptional standard, individual units of this Machine Empire require only a minimum of operational maintenance."
 
@@ -2408,7 +2411,7 @@
 # ------------------------------------------------------------
 # /
 
- 
+
 # Template
 
 
