edicts and fixes

--- a/localisation/english/replace/zz_evolved_civics_l_english.yml
+++ b/localisation/english/replace/zz_evolved_civics_l_english.yml
@@ -627,7 +627,7 @@
 	# evolved ones here
 	civic_tec_regular_patronage:0 "§L£tec_civic_feature£§!Juvenile Patronage" 
 	civic_tec_regular_patronage_desc:0 "['concept_tec_feature_civic']\n['concept_tec_leader_civic']\n\nThe constant search for talent must be done regardless of age or social condition, so this society invest a large amount of resources in searching the spark of curiosity and ability on each individual, trying to find the ones who will lead the rest, and ensure others will have the same opportunities."
-	civic_tec_regular_patronage_tooltip:0 "§HLeader Bonus:§! §Y$tec_loc_leader_icon$ Younger leaders§!\nNew hired §YLeaders§! will be §Yyounger§! than usual.\n§HLeader Bonus:§! §Y$tec_loc_leader_icon$ Prodigy§!\nLeaders have a §G25%§! chance of start with a §YProdigy Trait§!, providing a bonus scaling with their £council£ §HLevel§!, but increasing its £unity£ Recruitment cost by §R100%§!.\n\n§HInitial pick bonus:§! All assigned leaders will start with a $tec_loc_leader_icon$ Prodigy§! trait.\n\n"
+	civic_tec_regular_patronage_tooltip:0 "§HLeader Bonus:§! §Y$tec_loc_leader_icon$ Younger leaders§!\nNew hired §YLeaders§! will be §Yyounger§! than usual.\n§HLeader Bonus:§! §Y$tec_loc_leader_icon$ Prodigy§!\nLeaders have a §G25%§! chance of start with a §YProdigy Trait§!, providing a bonus scaling with their £council£ §HLevel§!, but increasing its £unity£ Recruitment cost by §R100%§!.\n\n§HInitial pick bonus:§! All assigned leaders will start with a §Y$tec_loc_leader_icon$ Prodigy§! trait.\n\n"
 
 	civic_tec_regular_surface_exploiters: "§L£tec_civic_feature£§!Surface Exploiters"
 	civic_tec_regular_surface_exploiters_desc:0 "['concept_tec_feature_civic']\n\nFor this civilization, any kind of natural resource is a mean to an end, and so its members methodically alter any environment to suit any need, even if that means an irreversible damage to the whole ecosystem."
@@ -1786,11 +1786,11 @@
  # Evolved
 	civic_tec_hive_cerebrates:0 "§M£tec_civic_leader£§!Designated Cerebrates"
 	civic_tec_hive_cerebrates_desc:0 "['concept_tec_leader_civic']\n\nTo maintain the stability and coherence of the Hive Mind, and promote a more critic and diverse thought, it splits some of its neural capacity between its most capable autonomous drones, specially engineered and breed to be efficient, ruthless and cunning."
-	civic_tec_hive_cerebrates_tooltip:0 "§HLeader Bonus:§! §Y$tec_loc_leader_icon$ Autonomous Cerebrates§!\nNew Hive Mind created leaders have a §G33%§! chance to receive the $tec_loc_leader_icon$ §YCerebrate§! trait after being created, providing a bonus scaling with their £council£ §HLevel§!, boosting some of the aspects of this gestalt consciousness, but increasing its £unity£ Recruitment cost by §R50%§!.\n\n§HInitial pick bonus:§! All assigned leaders will start with the $tec_loc_leader_icon$ §YCerebrate§! trait.\n\n"
+	civic_tec_hive_cerebrates_tooltip:0 "§HLeader Bonus:§! §Y$tec_loc_leader_icon$ Autonomous Cerebrates§!\nNew Hive Mind created leaders have a §G33%§! chance to receive the $tec_loc_leader_icon$ §YCerebrate§! trait after being created, providing a bonus scaling with their £council£ §HLevel§!, boosting some of the aspects of this gestalt consciousness, but increasing its £unity£ Recruitment cost by §R50%§!.\n\n§HInitial pick bonus:§! All assigned leaders will start with the §Y$tec_loc_leader_icon$ Cerebrate§! trait.\n\n"
 
 	civic_tec_hive_cerebrates_cyborg:0 "§M£tec_civic_leader£§!Organization Matrices"
 	civic_tec_hive_cerebrates_cyborg_desc:0 "['concept_tec_leader_civic']\n\nTo maintain the stability and coherence of the cybernetic link, and promote a more critic and diverse thought, this collective benefits some independend and capable drones with enhanced neural capacity, greatly boosting their efficiency, also making them ruthless and cunning."
-	civic_tec_hive_cerebrates_cyborg_tooltip:0 "§HLeader Bonus:§! §Y$tec_loc_leader_icon$ Organization Matrix§!\nNew Hive Mind created leaders have a §G33%§! chance to receive the $tec_loc_leader_icon$ §YOrganization Matrix§! trait after being created, providing a bonus scaling with their £council£ §HLevel§!, boosting some of the aspects of this gestalt consciousness, but increasing its £unity£ Recruitment cost by §R50%§!.\n\n§HInitial pick bonus:§! All assigned leaders will start with the $tec_loc_leader_icon$ §YOrganization Matrix§! trait.\n\n"
+	civic_tec_hive_cerebrates_cyborg_tooltip:0 "§HLeader Bonus:§! §Y$tec_loc_leader_icon$ Organization Matrix§!\nNew Hive Mind created leaders have a §G33%§! chance to receive the $tec_loc_leader_icon$ §YOrganization Matrix§! trait after being created, providing a bonus scaling with their £council£ §HLevel§!, boosting some of the aspects of this gestalt consciousness, but increasing its £unity£ Recruitment cost by §R50%§!.\n\n§HInitial pick bonus:§! All assigned leaders will start with the §Y$tec_loc_leader_icon$ Organization Matrix§! trait.\n\n"
 
 	civic_tec_hive_anaxiomatic:0 "§M£tec_civic_leader£§!Anaxiomatic Transference"
 	civic_tec_hive_anaxiomatic_desc:0 "['concept_tec_leader_civic']\n\nBy doing reiterative and complete revisions of the very foundation of the creation of autonomous drones, specially the ones dedicated to innovation and non linear thought, this collective ellaborated a way of making them more conscious and self-aware rewards with more creative and asymetric ways of identifying and transfering knowledge, at a great cost however, as physical and mental impact is greatly increased."
@@ -2193,7 +2193,7 @@
  # Vanilla
 	civic_machine_delegated_functions:0 "§M£tec_civic_leader£§!Delegated Functions"
 	civic_machine_delegated_functions_desc:0 "['concept_tec_leader_civic']\n\nThe Machine Intelligence works to reduce vulnerability by increasing modularity, reducing the strain of deploying additional semi-independent Units."
-	civic_tec_machine_delegated_functions_tooltip:0 "§HLeader Bonus:§! §Y$tec_loc_leader_icon$ Delegated Protocol§!\nNew synthetic leaders have a §G33%§! chance to receive the $tec_loc_leader_icon$ §YDelegated Protocol§! trait after being created, providing a bonus scaling with their £council£ §HLevel§!, boosting some of the aspects of this gestalt consciousness, but increasing its £unity£ Recruitment cost by §R50%§!.\n\n§HInitial pick bonus:§! All assigned leaders will start with the $tec_loc_leader_icon$ §YDelegated Protocol§! trait.\n\n"
+	civic_tec_machine_delegated_functions_tooltip:0 "§HLeader Bonus:§! §Y$tec_loc_leader_icon$ Delegated Protocol§!\nNew synthetic leaders have a §G33%§! chance to receive the $tec_loc_leader_icon$ §YDelegated Protocol§! trait after being created, providing a bonus scaling with their £council£ §HLevel§!, boosting some of the aspects of this gestalt consciousness, but increasing its £unity£ Recruitment cost by §R50%§!.\n\n§HInitial pick bonus:§! All assigned leaders will start with the §Y$tec_loc_leader_icon$ Delegated Protocol§! trait.\n\n"
 
 	civic_machine_factory_overclock:0 "§M£tec_civic_leader£§!Factory Overclocking"
 	civic_machine_factory_overclock_desc:0 "['concept_tec_leader_civic']\n\nThe Machine Intelligence takes care to maintain its production facilities, regularly updating existing templates and tuning individual units on the assembly line."
@@ -2202,12 +2202,10 @@
 	civic_machine_upkeep_twister_desc:1 "['concept_tec_leader_civic']\n\nUnits produced by this machine intelligence come equipped with autonomous decision-making software. More efficient and effective than older models, these units nevertheless require greater power input."
 	civic_tooltip_machine_upkeep_twister_effects:2 "Change §Y1§! Base $r_unity$ Leader Upkeep to §Y2§! $r_energy$"
 
-	civic_tooltip_memory_vault_machine_effects:0 "Can build unique £building£ §Y$building_paragon_memory_vaults$§!\n£building£§Y$building_paragon_memory_vaults$§! produce $r_unity$ and increase §Y$MOD_LEADER_SPECIES_EXP_GAIN$§! based on §YLeaders§! who acquired §YLevel 8§!."
 	civic_memory_vault_machine:1 "§M£tec_civic_leader£§!Experience Cache"
 	civic_memory_vault_machine_desc:0 "['concept_tec_leader_civic']\n\nThis machine intelligence was developed with the goal of digitizing and storing data and experiences in order to analyze, learn from, and use it for its own improvement."
-
-
-	# /
+	civic_tooltip_memory_vault_machine_effects:0 "Can build unique £building£ §Y$building_paragon_memory_vaults$§!\n£building£§Y$building_paragon_memory_vaults$§! produce $r_unity$ and increase §Y$MOD_LEADER_SPECIES_EXP_GAIN$§! based on §YLeaders§! who acquired §YLevel 8§!."
+ # /
  # Evolved
  # /
 # /
