idyllic building + shroud preacher

--- a/localisation/english/zz_evolved_modifiers_l_english.yml
+++ b/localisation/english/zz_evolved_modifiers_l_english.yml
@@ -438,11 +438,14 @@
 # ------------------------------------------------------------
  # HIDDEN MODIFIERS
 # ------------------------------------------------------------
- tec_converged_pop:0 "Converged"
- tec_converged_pop_desc:0 "An special psionic ritual merged another psionic pop with this pop."
+	tec_converged_pop:0 "Converged"
+	tec_converged_pop_desc:0 "An special psionic ritual merged another psionic pop with this pop."
 
- tec_demote_me_senpai:0 "Pop demotion modifier"
- tec_demote_me_senpai_desc:0 "Made so pops demote rapidly"
+	pop_modifier_tec_shroud_touched:0 "Shroud Blessing"
+	pop_modifier_tec_shroud_touched_desc:0 "Elevated by the psionic blessings given by callings of a Shroud Prayer."
+
+	tec_demote_me_senpai:0 "Pop demotion modifier"
+	tec_demote_me_senpai_desc:0 "Made so pops demote rapidly"
 
  tec_technoascendancy_base:0 "Technological Ascendancy"
  tec_technoascendancy_base_desc:0 "§EFuture awaits§!"
