--- a/localisation/english/replace/zz_evolved_traits_l_english.yml
+++ b/localisation/english/replace/zz_evolved_traits_l_english.yml
@@ -1576,8 +1576,10 @@ trait_tec_aiauth_planetary_node_desc: "The Planetary AI Node, housed within the 
 
 # /
 
-# Leader traits
+# Overwritten leader traits
 
-geologist_custom_desc:2 "$PLANET_EFFECTS_TXT$:\n$t$Leader produces §Y2 $tec_loc_research_resources$§! for each §Y$tec_loc_basic_resources$ $tec_loc_district$§! Max increase\n$t$Leader produces §Y1 $tec_loc_strategic_resources$§! for each §Y$tec_loc_strategic_resources$ $tec_loc_building$§! Job Max increase"
-geologist_custom_desc_2:1 "$PLANET_EFFECTS_TXT$:\n$t$Leader produces §Y3 $tec_loc_research_resources$§! for each §Y$tec_loc_basic_resources$ $tec_loc_district$§! Max increase\n$t$Leader produces §Y1.5 $tec_loc_strategic_resources$§! for each §Y$tec_loc_strategic_resources$ $tec_loc_building$§! Job Max increase"
-geologist_custom_desc_3:1 "$PLANET_EFFECTS_TXT$:\n$t$Leader produces §Y4 $tec_loc_research_resources$§! for each §Y$tec_loc_basic_resources$ $tec_loc_district$§! Max increase\n$t$Leader produces §Y2 $tec_loc_strategic_resources$§! for each §Y$tec_loc_strategic_resources$ $tec_loc_building$§! Job Max increase"
+	geologist_custom_desc:2 "$PLANET_EFFECTS_TXT$:\n$t$Leader produces §Y2 $tec_loc_research_resources$§! for each §Y$tec_loc_basic_resources$ $tec_loc_district$§! Max increase\n$t$Leader produces §Y1 $tec_loc_strategic_resources$§! for each §Y$tec_loc_strategic_resources$ $tec_loc_building$§! Job Max increase"
+	geologist_custom_desc_2:1 "$PLANET_EFFECTS_TXT$:\n$t$Leader produces §Y3 $tec_loc_research_resources$§! for each §Y$tec_loc_basic_resources$ $tec_loc_district$§! Max increase\n$t$Leader produces §Y1.5 $tec_loc_strategic_resources$§! for each §Y$tec_loc_strategic_resources$ $tec_loc_building$§! Job Max increase"
+	geologist_custom_desc_3:1 "$PLANET_EFFECTS_TXT$:\n$t$Leader produces §Y4 $tec_loc_research_resources$§! for each §Y$tec_loc_basic_resources$ $tec_loc_district$§! Max increase\n$t$Leader produces §Y2 $tec_loc_strategic_resources$§! for each §Y$tec_loc_strategic_resources$ $tec_loc_building$§! Job Max increase"
+
+	leader_trait_shroud_preacher_effect:1 "$t$Every §Y10 Years§! grants 2 £pop£ Pops the §Y$modifier_tec_shroud_touched$§! modifier, providing §G+25%§! £job£ Output."
