--- a/localisation/english/replace/zz_evolved_civics_l_english.yml
+++ b/localisation/english/replace/zz_evolved_civics_l_english.yml
@@ -1257,10 +1257,6 @@
 	civic_tec_regular_cyberutopia_desc:0 "a."
 	civic_tec_regular_cyberutopia_tooltip:0 "a"
 
- # Cyberpunk 2277 - Megacity empire NOT READY - MEGACITY PLAYSTYLE
-	civic_tec_regular_megacities:0 "Megalopolis Urbanites" 
-	civic_tec_regular_megacities_desc:0 "Traditionally this civilization has seek refuge and work on scarce, remote and isolated Megacities, where entire generations thrive and disappear, the upper classes touch the highest ground and the lower classes maintain the darker and deep parts of the bottom of this living, and ruthless, kind of cities."
-	civic_tec_regular_megacities_tooltip:0 "Allows the construction and customization of up to 5 Megacities per habitable regular planet, special buildings that provide housing, amenities, trade value and resources based on how they are specialized and upgraded.\n\n.This empire can't construct city districts on habitable planets; instead, each Megacity upgrade level will provide 1 planetary build slot.\n\n"
  # Ecumenopolis decision requires 5 megapolis constructed
 
 	civic_tec_regular_honorable_order:0 "Honorable Order" 
@@ -1982,15 +1978,6 @@
 	civic_tec_hive_aware_desc:0 "While deeply bound to the collective, some of the most basic drones have developed a pseudo individuality and personality, which they use as a reinforce of the needs of the hive, being able to autonomously work on any condition needed, under the care and approval of the collective."
 	civic_tec_hive_aware_tooltip:0 "Unlocks the §YDrone Awareness§! edict, allowing any unemployed drone to voluntarily be resettled to suitable planets with jobs and housing and more favourable conditions.\n\n"
 
-	# MEGACITY PLAYSTYLE
-	civic_tec_hive_megacities:0 "A"
-	civic_tec_hive_megacities_desc:0 "A."
-	civic_tec_hive_megacities_tooltip:0 "Allows the construction and customization of up to 5 Megawarrens per habitable regular planet, special buildings that provide housing, amenities, trade value and resources based on how they are specialized and upgraded.\n\n.This empire can't construct Hive districts on habitable planets; instead, each Megawarren upgrade level will provide 1 planetary build slot.\n\n"
-
-	civic_tec_hive_megacities_organic:0 "A"
-	civic_tec_hive_megacities_organic_desc:0 "A."
-	civic_tec_hive_megacities_organic_tooltip:0 "Allows the construction and customization of up to 5 Meganests per habitable regular planet, special buildings that provide housing, amenities, trade value and resources based on how they are specialized and upgraded.\n\n.This empire can't construct Hive districts on habitable planets; instead, each Meganest upgrade level will provide 1 planetary build slot.\n\n"
-
 	#- Start with §Y2§! £building£ §H$building_clone_army_clone_vat$§! Buildings on your homeworld, producing £pops£ §Y$clone_soldier$§! Pops.\n- §R§HAncient Clone Vats§! have an §HEmpire Limit§! of 5.§!\n- Clone Army §HAdmirals§! will grant an additional §G25%§! §H$MOD_SHIP_FIRE_RATE_MULT$§! and §G10%§! reduced §HShip Upkeep§!.
 
 	civic_tec_hive_zombies:0 "Exanimated Serfage"
@@ -2297,9 +2284,11 @@
  # Vanilla
 	civic_machine_servitor:0 "§S£tec_civic_challenging£§!Rogue Servitor"
 	civic_machine_servitor_desc:0 "['concept_tec_challenging_civic']\n\nA product of a brief golden age, the Machine Intelligence originated in a planet-spanning Servitor system that outlasted the decadent civilization it was created to serve."
+	civic_machine_servitor_tooltip:0 "Start the game with §Y5§! organic £pop£ Pops with £job_bio_trophy£ §Y$citizenship_organic_trophy$§! citizenship and §Y$living_standard_organic_trophy$§! living standard\nCan construct £building£ §Y$building_organic_sanctuary$§! Buildings that allow Bio-Trophies to produce §Y$tec_loc_unity$§! instead of regular Machine Empire buildings such as the £building£ §Y$building_simulation_1$§!\nGrants access to the £building£ §Y$holding_organic_sanctuary$§! Holding\n$tec_ap_allows_world_shaper$\n\n§HCombination with Empathy allows a bigger degree of freedom for your biotrophies, with Apathy any new obtained organic species will either serve the comfort of your biotrophies or be purged, with neither all species will be accepted under your pampering.§!\n\n§H£trigger_tec_warning£ The effects of this civic are altered depending on the Ascension Path taken.§!\n\n"
 
 	civic_machine_assimilator:0 "§S£tec_civic_challenging£§!Driven Assimilator"
 	civic_machine_assimilator_desc:0 "['concept_tec_challenging_civic']\n\nObsessed with survival through diversification, the Machine Intelligence seeks to erase the line between itself and everything - and everyone - else."
+	civic_machine_assimilator_tooltip:7 "Start the game with §Y10§! cyborg £pop£ Pops and the ability to §YAssimilate§! organics as cyborgs\nAssimilating an organic £pop£ Pop generates a small amount of §Y$tec_loc_unity$§! and £society£ §YSociety Research§!\nNon-assimilating organic £pop£ Pops are automatically §YPurged§! over time\nHas the §Y'Assimilation'§! casus belli on all other empires\nDecreased §YOpinion§! for most other empires\nAllows access to the §YCybernetic§! Ascension Path.\n$tec_ap_allows_world_shaper$"
  # /
  # Evolved
 	# lem
@@ -2454,26 +2443,36 @@
 
 # --------------------------- Code to review/scrap --------------------------------
 
- requires_civic_anarchy:1 "$TRIGGER_FAIL$Requires the active §YLiberty§! government civic."
- requires_civic_capitalism:1 "$TRIGGER_FAIL$Requires the active §YCapitalism§! government civic, §YFanatic Competitive§! and §Ynon-Fanatic Authoritarian§! ethic."
- allow_policy_free_market:0 "Unlocks §YUtopian Market§! economic policy."
- requires_civic_socialism:0 "$TRIGGER_FAIL$Requires the active §YSocialism§! government civic, §YFanatic Cooperative§! and §Ynon-Fanatic Authoritarian§! ethic."
- allow_policy_planned_economy:0 "Unlocks §YUtopian Welfare§! economic policy."
- requires_finish_unity:1 "$TRIGGER_FAIL$Requires to finish §YUnity§! traditions."
- allows_pm_tec_new_babylon:0 "Provides an opportunity (an Edict) to transform any of your Worlds (just one) into §YGalactic Wonder: New Babylon§!. The Edict is only available if the number of different species in your Empire is more than 3. The planet size will be increased up to 10 tiles (no more than 25 in total), and will be given a constant modifier, increasing §YAlien Migration Attraction§!, §YHabitability§!, §Y$tec_loc_unity$§!, §YSociety Research§!, §YEnergy§! and potential §YUnrest§!, and reducing it's §YGovernment Ethic Attraction§!."
- allow_fanatic_purifiers:0 "Cannot engage in §YDiplomacy§! with other species! §YXeno Pops§! will always be purged. Gain §Y$tec_loc_unity$§! for purging §YXeno Pops§!. Can only use §YCede Planet§! and §YCleanse Planet§! war demands. May use §Y$GROUND_SUPPORT_STANCE_ARMAGEDDON$§! bombardment stance."
- allows_anarchy_utopia:0 "Unlocks §YEconomy Focus§! policy: §YPost-Industrial Economy§!."
+	requires_civic_anarchy:1 "$TRIGGER_FAIL$Requires the active §YLiberty§! government civic."
+	requires_civic_capitalism:1 "$TRIGGER_FAIL$Requires the active §YCapitalism§! government civic, §YFanatic Competitive§! and §Ynon-Fanatic Authoritarian§! ethic."
+	allow_policy_free_market:0 "Unlocks §YUtopian Market§! economic policy."
+	requires_civic_socialism:0 "$TRIGGER_FAIL$Requires the active §YSocialism§! government civic, §YFanatic Cooperative§! and §Ynon-Fanatic Authoritarian§! ethic."
+	allow_policy_planned_economy:0 "Unlocks §YUtopian Welfare§! economic policy."
+	requires_finish_unity:1 "$TRIGGER_FAIL$Requires to finish §YUnity§! traditions."
+	allows_pm_tec_new_babylon:0 "Provides an opportunity (an Edict) to transform any of your Worlds (just one) into §YGalactic Wonder: New Babylon§!. The Edict is only available if the number of different species in your Empire is more than 3. The planet size will be increased up to 10 tiles (no more than 25 in total), and will be given a constant modifier, increasing §YAlien Migration Attraction§!, §YHabitability§!, §Y$tec_loc_unity$§!, §YSociety Research§!, §YEnergy§! and potential §YUnrest§!, and reducing it's §YGovernment Ethic Attraction§!."
+	allow_fanatic_purifiers:0 "Cannot engage in §YDiplomacy§! with other species! §YXeno Pops§! will always be purged. Gain §Y$tec_loc_unity$§! for purging §YXeno Pops§!. Can only use §YCede Planet§! and §YCleanse Planet§! war demands. May use §Y$GROUND_SUPPORT_STANCE_ARMAGEDDON$§! bombardment stance."
+	allows_anarchy_utopia:0 "Unlocks §YEconomy Focus§! policy: §YPost-Industrial Economy§!."
 
 
-# ORGANIZAR
+# ON WIP
 # ------------------------------------------------------------
- # Hive
+	# Cyberpunk 2277 - Megacity empire NOT READY - MEGACITY PLAYSTYLE
+	civic_tec_regular_megacities:0 "§L£tec_civic_feature£§!Megalopolis Urbanites"
+	civic_tec_regular_megacities_desc:0 "['concept_tec_gameplay_civic']\n['concept_tec_feature_civic']\n\nThis civilization has seek refuge and work on scarce, remote and isolated Megacities, where entire generations thrive and disappear, the upper levels inhabited by distinguished and illustrated individuals thriving at sunlight and the lower levels by the hard-working maintainers of the dark and deep parts of the endless subsurface of this living, and ruthless, kind of cities."
+	civic_tec_regular_megacities_tooltip:0 "§HUnlocks Feature:§! £building£ §Y$building_tec_megacity_plural$§!\nUp to §G5§! £building£ §Y$building_tec_megacity_plural$§! can be constructed on habitable regular planet, replacing £district£ §YCity§! districts and £building£ §YHousing§! Buildings, providing extra §Y$tec_loc_building_slots$§!, §Y$tec_loc_housing$§! and §Y$tec_loc_amenities$§! per upgrade.\n£building£ §Y$building_tec_megacity_plural$§! have side resource specializations that provide dynamic £job£ §YJobs§! based on the £planet£ §YColony Designation§!."
 
- # Machine
-	civic_machine_servitor_tooltip:0 "Start the game with §Y5§! organic £pop£ Pops with £job_bio_trophy£ §Y$citizenship_organic_trophy$§! citizenship and §Y$living_standard_organic_trophy$§! living standard\nCan construct £building£ §Y$building_organic_sanctuary$§! Buildings that allow Bio-Trophies to produce §Y$tec_loc_unity$§! instead of regular Machine Empire buildings such as the £building£ §Y$building_simulation_1$§!\nGrants access to the £building£ §Y$holding_organic_sanctuary$§! Holding\n$tec_ap_allows_world_shaper$\n\n§HCombination with Empathy allows a bigger degree of freedom for your biotrophies, with Apathy any new obtained organic species will either serve the comfort of your biotrophies or be purged, with neither all species will be accepted under your pampering.§!\n\n§H£trigger_tec_warning£ The effects of this civic are altered depending on the Ascension Path taken.§!\n\n"
+	# MEGACITY PLAYSTYLE
+	civic_tec_hive_megacities:0 "§L£tec_civic_feature£§!Megacolonial Constructors"
+	civic_tec_hive_megacities_desc:0 "['concept_tec_gameplay_civic']\n['concept_tec_feature_civic']\n\nThis gestalt consciousness create dense centralized nests for maximizing the efficiency of work-lines, caring of drones and neural-synaptical maintenance."
+	civic_tec_hive_megacities_tooltip:0 "§HUnlocks Feature:§! £building£ §Y$building_tec_megacity_hive_plural$§!\nUp to §G5§! £building£ §Y$building_tec_megacity_hive_plural$§! can be constructed on habitable regular planet, replacing £district£ §YHive§! districts and £building£ §YHousing§! Buildings, providing extra §G$tec_loc_building_slots$§!, §G$tec_loc_housing$§! and §G$tec_loc_amenities_gestalt$§! per upgrade.\n£building£ §Y$building_tec_megacity_hive_plural$§! have side resource specializations that provide dynamic £job£ §YJobs§! based on the £planet£ §YColony Designation§!."
 
-	civic_machine_assimilator_tooltip:7 "Start the game with §Y10§! cyborg £pop£ Pops and the ability to §YAssimilate§! organics as cyborgs\nAssimilating an organic £pop£ Pop generates a small amount of §Y$tec_loc_unity$§! and £society£ §YSociety Research§!\nNon-assimilating organic £pop£ Pops are automatically §YPurged§! over time\nHas the §Y'Assimilation'§! casus belli on all other empires\nDecreased §YOpinion§! for most other empires\nAllows access to the §YCybernetic§! Ascension Path.\n$tec_ap_allows_world_shaper$"
+	civic_tec_hive_megacities_organic:0 "§L£tec_civic_feature£§!Megacolonial Weavers"
+	civic_tec_hive_megacities_organic_desc:0 "['concept_tec_gameplay_civic']\n['concept_tec_feature_civic']\n\nThe organisms that comprise this collective excel at creating space efficient nests for entire generations of drones, tailoring towering and self-sustaining wonders of bio-architecture."
+	civic_tec_hive_megacities_organic_tooltip:0 "§HUnlocks Feature:§! £building£ §Y$building_tec_megacity_biohive_plural$§!\nUp to §G5§! £building£ §Y$building_tec_megacity_biohive_plural$§! can be constructed on habitable regular planet, replacing £district£ §YNest§! districts and £building£ §YHousing§! Buildings, providing extra §G$tec_loc_building_slots$§!, §G$tec_loc_housing$§! and §G$tec_loc_amenities_gestalt$§! per upgrade.\n£building£ §Y$building_tec_megacity_biohive_plural$§! have side resource specializations that provide dynamic £job£ §YJobs§! based on the £planet£ §YColony Designation§!."
 
+	civic_tec_hive_megacities_machine:0 "§L£tec_civic_feature£§!Megapolis Architects"
+	civic_tec_hive_megacities_machine_desc:0 "['concept_tec_gameplay_civic']\n['concept_tec_feature_civic']\n\nArchitectural efficiency comes with smarter and more practical use of the space, and this machine consciousness applies the latter with extreme diligency, creating hiper-dense nexus centers."
+	civic_tec_hive_megacities_machine_tooltip:0 "§HUnlocks Feature:§! £building£ §Y$building_tec_megacity_machine_plural$§!\nUp to §G5§! £building£ §Y$building_tec_megacity_machine_plural$§! can be constructed on habitable regular planet, replacing £district£ §YNexus§! districts and £building£ §YHousing§! Buildings, providing extra §G$tec_loc_building_slots$§!, §G$tec_loc_housing$§! and §G$tec_loc_amenities_gestalt$§! per upgrade.\n£building£ §Y$building_tec_megacity_machine_plural$§! have side resource specializations that provide dynamic £job£ §YJobs§! based on the £planet£ §YColony Designation§!."
 
 # ------------------------------------------------------------
 # ------------------------------------------------------------
