--- a/localisation/english/zz_evolved_cui_l_english.yml
+++ b/localisation/english/zz_evolved_cui_l_english.yml
@@ -73,6 +73,9 @@
 	tec_loc_trade_value: "£trade_value£ $TRADE_VALUE$"
 	tec_loc_pop_growth: "£mod_pop_growth_speed£ Pop Growth Speed"
 
+
+	tec_loc_building_slots: "$planet_automation_building_slot$"
+
 	tec_loc_edict_capacity: "£mod_country_edict_fund_add£ Edict Capacity"
 	tec_loc_admincap: "£mod_country_admin_cap_add£ $MOD_COUNTRY_ADMIN_CAP_ADD$"
 
